--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -13,7 +13,7 @@ trigger:
   - azure-pipelines
 
 jobs:
-  - job: 'ubuntu1604_gcc54_cmake312'
+  - job: 'ubuntu1604_gcc5_cxx11_cmake'
     pool:
       vmImage: 'ubuntu-16.04'
     steps:
@@ -26,7 +26,23 @@ jobs:
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
 
-  - job: 'win2016_vs2017_cmake312'
+  - job: 'ubuntu1604_gcc8_cxx14_cmake'
+    pool:
+      vmImage: 'ubuntu-16.04'
+    steps:
+      - template: .ci/azure-pipelines/steps-install-gcc.yml
+      - script: which g++ && g++ --version
+        displayName: 'Check GCC'
+      - template: .ci/azure-pipelines/steps-check-cmake.yml
+      - script: |
+          sudo apt-get install libjpeg-dev libpng16-dev libtiff5-dev libraw-dev
+        displayName: 'Install dependencies'
+      - template: .ci/azure-pipelines/steps-install-boost.yml
+      - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
+        parameters:
+          cxxver: '14'
+
+  - job: 'win2016_vs2017_cxx14_cmake'
     pool:
       vmImage: 'vs2017-win2016'
     steps:
@@ -37,7 +53,19 @@ jobs:
         parameters:
           use_conan: 'yes'
 
-  - job: 'macos1013_xcode91_cmake313'
+  - job: 'win2016_vs2017_cxx17_cmake'
+    pool:
+      vmImage: 'vs2017-win2016'
+    steps:
+      - template: .ci/azure-pipelines/steps-check-cmake.yml
+      - template: .ci/azure-pipelines/steps-install-conan.yml
+      - template: .ci/azure-pipelines/steps-install-boost.yml
+      - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
+        parameters:
+          use_conan: 'yes'
+          cxxver: '17'
+
+  - job: 'macos1013_xcode91_cmake'
     pool:
       vmImage: 'macOS-10.13'
     steps:
