--- a/.ci/azure-pipelines/steps-install-gcc.yml
+++ b/.ci/azure-pipelines/steps-install-gcc.yml
@@ -11,7 +11,7 @@ parameters:
 steps:
   - bash: |
       sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-      sudo apt-get update
+      sudo apt-get update -qq
       sudo apt-get install g++-${{ parameters.major_version }}
       sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ parameters.major_version }} 90
       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ parameters.major_version }} 90
