--- a/.ci/azure-pipelines/steps-install-gcc.yml
+++ b/.ci/azure-pipelines/steps-install-gcc.yml
@@ -15,3 +15,4 @@ steps:
       sudo apt-get install g++-${{ parameters.major_version }}
       sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ parameters.major_version }} 90
       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ parameters.major_version }} 90
+    displayName: 'Install GCC'
