--- a/test/image/CMakeLists.txt
+++ b/test/image/CMakeLists.txt
@@ -1,14 +1,13 @@
 #
-# Copyright (c) 2018 Mateusz Loskot <mateusz at loskot dot net>
+# Copyright (c) 2019 Mateusz Loskot <mateusz at loskot dot net>
 #
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-  for_each_pixel
-  std_fill)
-  set(_target test_core_algorithm_${_name})
+  concepts)
+  set(_target test_core_image_${_name})
 
   add_executable(${_target} "")
   target_sources(${_target} PRIVATE ${_name}.cpp)
