Move GIL's original test suites to test/legacy/
Document maintenance rules of `test/legacy/` content.

Motivation to move the `test/legacy/` is to:
* clarify status of those tests
* make it easier to run tests selectively
* separate new/upcoming feature-specific tests
  from those all-in-one tests.

Other changes:
Rename `gil_test_common.hpp` to `unit_test.hpp` to make
it clearer it acts as `boost/test/unit_test.hpp proxy`.
Remove `<include>$(BOOST_ROOT)` from `Jamfile`-s as unnecessary.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2017 Mateusz Loskot <mateusz at loskot dot net>
+# Copyright (c) 2017-2019 Mateusz Loskot <mateusz at loskot dot net>
 #
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at
@@ -7,18 +7,12 @@
 #
 message(STATUS "Boost.GIL: Configuring core tests")
 
-# All-in-one tests, legacy
-# TODO: To be refactored to modular
 foreach(_name
-  channel
-  image
-  pixel
-  pixel_iterator
   promote_integral)
   set(_target all_in_one_${_name})
 
   add_executable(${_target} "")
-  target_sources(${_target} PRIVATE ${_name}.cpp error_if.cpp)
+  target_sources(${_target} PRIVATE ${_name}.cpp)
   target_link_libraries(${_target}
     PRIVATE
       gil_compile_options
@@ -31,23 +25,14 @@ foreach(_name
   unset(_name)
 endforeach()
 
-# Add extra source files accompanying image.cpp
-target_sources(all_in_one_image
-  PRIVATE
-    error_if.cpp
-    sample_image.cpp)
-add_test(test.all_in_one.image
-  all_in_one_image
-  ${CMAKE_CURRENT_SOURCE_DIR}/gil_reference_checksums.txt)
-
 if(GIL_BUILD_HEADERS_TESTS)
   add_subdirectory(headers)
 endif()
 
-# Modular tests
 add_subdirectory(point)
 add_subdirectory(channel)
 add_subdirectory(pixel)
 add_subdirectory(image)
 add_subdirectory(image_view)
 add_subdirectory(algorithm)
+add_subdirectory(legacy)
