--- a/test/point/CMakeLists.txt
+++ b/test/point/CMakeLists.txt
@@ -17,6 +17,7 @@ foreach(_name
       gil_compile_options
       gil_include_directories
       gil_dependencies)
+  target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
   add_test(test.core.${_name} ${_target})
 
   unset(_name)
