Add test for locator concepts

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 add_subdirectory(point)
 add_subdirectory(channel)
 add_subdirectory(pixel)
+add_subdirectory(locator)
 add_subdirectory(image)
 add_subdirectory(image_view)
 add_subdirectory(algorithm)
