Update test/channel/concepts.cpp name in build config
Change missing from SHA-1:3d8469eafe59bc3fef3052bad375704614023e9d

--- a/test/channel/CMakeLists.txt
+++ b/test/channel/CMakeLists.txt
@@ -6,7 +6,7 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-  channel_concepts
+  concepts
   channel_test_fixture
   channel_traits
   scoped_channel_value
