Add tests for dynamic_{x,y}_step_type specializations
Basic verification expected specializations of `dynamic_x_step_type`
and `dynamic_y_step_type` are in place.

--- a/test/locator/CMakeLists.txt
+++ b/test/locator/CMakeLists.txt
@@ -6,7 +6,8 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(_name
-  concepts)
+  concepts
+  dynamic_step)
   set(_target test_core_locator_${_name})
 
   add_executable(${_target} "")
