--- a/.ci/azure-pipelines/steps-install-conan.yml
+++ b/.ci/azure-pipelines/steps-install-conan.yml
@@ -10,6 +10,7 @@ parameters:
 steps:
   - script: |
       ${{ parameters.python }} --version
+      ${{ parameters.python }} -m pip install --upgrade pip
       ${{ parameters.python }} -m pip install --upgrade conan
       conan --version
     displayName: 'Install Conan'
