Add pixel test fixture with all core pixel types
Add test for pixel_reference_is_mutable metafunction.

From the legacy tests
- port value_core and reference_core fixtures, see
  https://lists.boost.org/boost-gil/2019/02/0138.php
- port representative pixel types and verify with tests of some
  metafunctions.

--- a/test/pixel/CMakeLists.txt
+++ b/test/pixel/CMakeLists.txt
@@ -10,7 +10,9 @@ foreach(_name
   is_pixel
   is_planar
   num_channels
-  pixels_are_compatible)
+  pixel_reference_is_mutable
+  pixels_are_compatible
+  test_fixture)
   set(_target test_core_pixel_${_name})
 
   add_executable(${_target} "")
