Add pixel test fixture with all core pixel types (#248)
Add test for pixel_reference_is_mutable metafunction.

From the legacy tests
- port value_core and reference_core fixtures, see
  https://lists.boost.org/boost-gil/2019/02/0138.php
- port representative pixel types and verify with tests of some
  metafunctions.

Clean up test names for CTest in the CMake configuration.
Disable some GCC/clang warnings in tests to avoid CI build
termination due to too long logs.

--- a/test/pixel/CMakeLists.txt
+++ b/test/pixel/CMakeLists.txt
@@ -10,7 +10,9 @@ foreach(_name
   is_pixel
   is_planar
   num_channels
-  pixels_are_compatible)
+  pixel_reference_is_mutable
+  pixels_are_compatible
+  test_fixture)
   set(_target test_core_pixel_${_name})
 
   add_executable(${_target} "")
@@ -21,7 +23,7 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.${_name} ${_target})
+  add_test(test.core.pixel.${_name} ${_target})
 
   unset(_name)
   unset(_target)
