Add test for some bit-aligned pixel types and metafunctions
Test bit_aligned_pixel_reference and packed_pixel as well as
some of related metafunctions generating types of their
members and intermediate specializations.

--- a/test/pixel/CMakeLists.txt
+++ b/test/pixel/CMakeLists.txt
@@ -7,9 +7,11 @@
 #
 foreach(_name
   concepts
+  bit_aligned_pixel_reference
   is_pixel
   is_planar
   num_channels
+  packed_pixel
   pixel_reference_is_mutable
   pixels_are_compatible
   test_fixture)
