Add build using VS2015 to Azure Pipelines [skip travis] [skip appveyor]

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -78,6 +78,24 @@ jobs:
           use_conan: 'yes'
           cxxver: '17'
 
+
+  - job: 'win2012_vs2015_cmake'
+    pool:
+      vmImage: 'vs2015-win2012r2'
+    steps:
+      - task: UsePythonVersion@0
+        displayName: 'Setup Python'
+        inputs:
+          versionSpec: '3.6'
+          addToPath: true
+          architecture: 'x64'
+      - template: .ci/azure-pipelines/steps-check-cmake.yml
+      - template: .ci/azure-pipelines/steps-install-conan.yml
+      - template: .ci/azure-pipelines/steps-install-boost.yml
+      - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
+        parameters:
+          use_conan: 'yes'
+
   - job: 'macos1013_xcode91_cmake'
     pool:
       vmImage: 'macOS-10.13'
