Download Python installer directly

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -83,7 +83,9 @@ jobs:
     pool:
       vmImage: 'vs2015-win2012r2'
     steps:
-      - script: choco install --yes python --version 3.7.1
+      - powershell: 'Invoke-WebRequest https://www.python.org/ftp/python/3.7.1/python-3.7.1-amd64-webinstall.exe -OutFile C:\python-3.7.1-setup.exe'
+      - script: |
+          C:\python-3.7.1-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37
       - template: .ci/azure-pipelines/steps-check-cmake.yml
       - template: .ci/azure-pipelines/steps-install-conan.yml
         parameters:
