Hack inability to persist PATH changes on AzP

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -83,13 +83,20 @@ jobs:
     pool:
       vmImage: 'vs2015-win2012r2'
     steps:
-      - powershell: 'Invoke-WebRequest https://dl.bintray.com/conan/installers/conan-win-64_1_13_1.exe -OutFile C:\conan-setup.exe'
-        displayName: 'Download Conan'
+      - powershell: 'Invoke-WebRequest https://www.python.org/ftp/python/3.7.1/python-3.7.1-amd64-webinstall.exe -OutFile C:\py3-setup.exe'
+        displayName: 'Download Python'
       - script: |
-          C:\conan-setup.exe /sp- /silent /norestart /nocloseapplications
-          conan --version
-        displayName: 'Install Conan'
+          C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37
+          python.exe --version
+          py -3 --version
+          mklink C:\Windows\python.exe C:\Python37\python.exe
+          mklink C:\Windows\conan.exe C:\Python37\Scripts\conan.exe
+          python.exe --version
+        displayName: 'Install Python'
       - template: .ci/azure-pipelines/steps-check-cmake.yml
+      - template: .ci/azure-pipelines/steps-install-conan.yml
+        parameters:
+          python: C:\Python37\python.exe
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
         parameters:
