Remove Python symlink

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -87,11 +87,10 @@ jobs:
         displayName: 'Download Python'
       - script: |
           C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37
-          python.exe --version
+          python --version
           py -3 --version
-          mklink C:\Windows\python.exe C:\Python37\python.exe
           mklink C:\Windows\conan.exe C:\Python37\Scripts\conan.exe
-          python.exe --version
+          conan --version
         displayName: 'Install Python'
       - template: .ci/azure-pipelines/steps-check-cmake.yml
       - template: .ci/azure-pipelines/steps-install-conan.yml
