--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -85,9 +85,11 @@ jobs:
     steps:
       - powershell: |
           Invoke-WebRequest https://www.python.org/ftp/python/3.7.1/python-3.7.1-amd64-webinstall.exe -OutFile C:\py3-setup.exe
-          & C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37
-          Write-Host "##vso[task.prependpath]C:\Python37"
-          Write-Host "##vso[task.prependpath]C:\Python37\Scripts"
+        displayName: 'Download Python'
+      - script: |
+          C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37
+          @echo ##vso[task.prependpath]C:\Python37
+          @echo ##vso[task.prependpath]C:\Python37\Scripts
         displayName: 'Install Python'
       - template: .ci/azure-pipelines/steps-check-cmake.yml
       - template: .ci/azure-pipelines/steps-install-conan.yml
