--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -93,7 +93,7 @@ jobs:
         displayName: 'Install Python'
       - powershell: |
           Invoke-WebRequest https://cmake.org/files/v3.14/cmake-3.14.0-win64-x64.zip -OutFile C:\cmake-3.14.0-win64-x64.zip
-          Expand-Archive C:\cmake.zip -DestinationPath C:\
+          Expand-Archive C:\cmake-3.14.0-win64-x64.zip -DestinationPath C:\
           Rename-Item -Path C:\cmake-3.14.0-win64-x64 -NewName C:\cmake
           Write-Host "##vso[task.prependpath]C:\cmake\bin"
         displayName: 'Install CMake'
