--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -88,7 +88,9 @@ jobs:
           C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37 | Out-Null
           Write-Host "##vso[task.prependpath]C:\Python37"
           Write-Host "##vso[task.prependpath]C:\Python37\Scripts"
+          python --version
         displayName: 'Install latest Python'
+      - script: python --version
       - powershell: |
           Invoke-WebRequest https://cmake.org/files/v3.14/cmake-3.14.0-win64-x64.zip -OutFile C:\cmake-3.14.0-win64-x64.zip
           Expand-Archive C:\cmake-3.14.0-win64-x64.zip -DestinationPath C:\
