--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -78,6 +78,31 @@ jobs:
           use_conan: 'yes'
           cxxver: '17'
 
+  - job: 'win2012_vs2015_cmake'
+    pool:
+      vmImage: 'vs2015-win2012r2'
+    steps:
+      - powershell: |
+          Invoke-WebRequest https://cmake.org/files/v3.14/cmake-3.14.0-win64-x64.zip -OutFile C:\cmake-3.14.0-win64-x64.zip
+          Expand-Archive C:\cmake-3.14.0-win64-x64.zip -DestinationPath C:\
+          Rename-Item -Path C:\cmake-3.14.0-win64-x64 -NewName C:\cmake
+          Write-Host "##vso[task.prependpath]C:\cmake\bin"
+        displayName: 'Install CMake 3.14'
+      - template: .ci/azure-pipelines/steps-check-cmake.yml
+      - powershell: |
+          Invoke-WebRequest https://www.python.org/ftp/python/3.7.1/python-3.7.1-amd64-webinstall.exe -OutFile C:\py3-setup.exe
+          C:\py3-setup.exe /quiet PrependPath=1 InstallAllUsers=1 Include_launcher=1 InstallLauncherAllUsers=1 Include_test=0 Include_doc=0 Include_dev=0 Include_debug=0 Include_tcltk=0 TargetDir=C:\Python37 | Out-Null
+          Write-Host "##vso[task.prependpath]C:\Python37"
+          Write-Host "##vso[task.prependpath]C:\Python37\Scripts"
+        displayName: 'Install Python 3.7'
+      - template: .ci/azure-pipelines/steps-install-conan.yml
+        parameters:
+          python: C:\Python37\python.exe
+      - template: .ci/azure-pipelines/steps-install-boost.yml
+      - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
+        parameters:
+          use_conan: 'yes'
+
   - job: 'macos1013_xcode91_cmake'
     pool:
       vmImage: 'macOS-10.13'
