Add test for packed_channel_value and is_integral specialization

--- a/test/channel/CMakeLists.txt
+++ b/test/channel/CMakeLists.txt
@@ -13,6 +13,8 @@ foreach(_name
   algorithm_channel_relation
   channel_traits
   concepts
+  is_integral
+  packed_channel_value
   scoped_channel_value
   test_fixture)
   set(_target test_core_channel_${_name})
