Value-initialize channel and pixel value members
Add tests to ensure member values of channel and pixel classes are
determined, zero-initialized.
Fixes #270

Tidy up formatting.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 add_subdirectory(point)
 add_subdirectory(channel)
 add_subdirectory(color)
+add_subdirectory(color_base)
 add_subdirectory(pixel)
 add_subdirectory(iterator)
 add_subdirectory(locator)
