[cmake] Update CMakeSettings.json with Boost hints [ci skip]

--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -19,11 +19,14 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "Boost_DEBUG", "value": "ON" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
-        { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
-        { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
+        { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
+        { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
@@ -40,14 +43,17 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
+        { "name": "Boost_DEBUG", "value": "ON" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.71" },
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
+        { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
+        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
         { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        { "name": "GIL_USE_CONAN", "value": "OFF" }
       ]
     },
     {
@@ -61,11 +67,15 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
-        { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
-        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
+        { "name": "Boost_DEBUG", "value": "ON" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.71" },
+        { "name": "Boost_ARCHITECTURE", "value": "-x32" },
+        { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
+        { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "ON" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
@@ -81,17 +91,21 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "OFF" },
-        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "OFF" },
-        { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
-        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "OFF" },
+        { "name": "Boost_DEBUG", "value": "ON" },
+        { "name": "Boost_ADDITIONAL_VERSIONS", "value": "1.71" },
+        { "name": "Boost_ARCHITECTURE", "value": "-x32" },
+        { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
+        { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
+        { "name": "GIL_BUILD_HEADERS_TESTS", "value": "ON" },
         { "name": "GIL_DOWNLOAD_FINDBOOST", "value": "ON" },
         { "name": "GIL_USE_CONAN", "value": "ON" }
       ]
     },
     {
-      "name": "x64-Debug",
+      "name": "x64-Debug-VS2017",
       "generator": "Visual Studio 15 2017 Win64",
       "configurationType": "Debug",
       "buildRoot": "${env.BuildDir}\\${name}",
@@ -104,7 +118,7 @@
       ]
     },
     {
-      "name": "x64-Release",
+      "name": "x64-Release-VS2017",
       "generator": "Visual Studio 15 2017 Win64",
       "configurationType": "Release",
       "buildRoot": "${env.BuildDir}\\${name}",
@@ -117,7 +131,7 @@
       ]
     },
     {
-      "name": "x86-Debug",
+      "name": "x86-Debug-VS2017",
       "generator": "Visual Studio 15 2017",
       "configurationType": "Debug",
       "buildRoot": "${env.BuildDir}\\${name}",
@@ -130,7 +144,7 @@
       ]
     },
     {
-      "name": "x86-Release",
+      "name": "x86-Release-VS2017",
       "generator": "Visual Studio 15 2017",
       "configurationType": "Release",
       "buildRoot": "${env.BuildDir}\\${name}",
